@@ -1,3 +1,9 @@
+2008-08-04  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-25-01
+	* fix confdb.db.ConfDB::removeConfiguration(), remove streams &
+	datasets as well.
+
 2008-07-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-25-00
